Refactor DirUtil class
* Added an annotation that the method should be executed only in another thread